--- a/基础物理/杨振宁/第十五讲.md
+++ b/基础物理/杨振宁/第十五讲.md
@@ -1,31 +1,31 @@
 
-
- We had talked about the gyroscope. If it has an angular momentum of L, this is the z-axis.It's at the angle of theta. There were several, I said, well we had analyzed how it moves. The question was it can precess around the z-axis.It's at the top which precesses around the z-axis. The motion which goes around this way is called nutation. Nutation means that it's not stable.（我们之前讨论过陀螺仪。如果它的角动量为L，这是z轴。它与z轴的夹角为θ。我们分析过它的运动方式。问题是它能绕z轴进动。位于顶部的陀螺会绕z轴进动。这种绕轴旋转的运动称为章动。章动意味着它不稳定。）
-
-It's not a smooth operation. It goes around that circle. Like in the diagram that I showed you of Feynman, in Feynman's book.Several students came to me and said that there is a motion which is smoothly just going around without the nutation. I didn't believe that. But I went back and went through a complicated analysis.They were right. It's possible to have that motion. And the final formula is like this.mg is the weight of this body. This rod is supposed to be weightless. The length of the rod is supposed to be L. （这并不是一个平稳的运动。它会绕着那个圆圈转。就像我在费曼的书中给你们看的费曼图那样。有几个学生来找我，说有一种运动可以平稳地绕圈而不产生章动。我一开始并不相信。但后来我回去进行了复杂的分析。他们是对的。确实存在这种运动。最终的公式是这样的。mg代表这个物体的重量。这根杆子假设是无重的。杆子的长度假设为L。）
+The results of the Qizhong test were very good.and perhaps talk to Professor Rang or Professor An about how you could do better later on this semester. It's clear that the average score of Tsinghua students is much better than my students at Stony Brook. So I'm pleased about that.（期中测试的成绩很好，大部分人成绩在 70-100 之间，平均分是 86，那些不到 70 分的同学，或许你可以和冉教授或安教授谈谈这学期后期如何做得更好。显然，清华大学学生的平均成绩比我石溪分校的学生要好得多。对此我感到很高兴。）
 
 
-Theta is this angle.Theta can be 90 degrees but it can be bigger or smaller than 90 degrees. Capital omega is the angular velocity around the z-axis if it goes smoothly. I2, this top, this gyroscope has a I1 which is the main one.But it has three angular momenta. It has three principal axes of inertia. And one of them is I1.The other two are I2 and I3 which are supposed to be the same. Then it can have this formula. If cosine theta is zero, then theta is 90 degrees.（θ代表这个角度。θ可以是90度，也可以大于或小于90度。大写的Ω表示绕z轴的角速度，前提是运动平稳。I2，这个顶部，这个陀螺仪有一个主要的I1。但它有三个角动量，有三个主惯性轴。其中一个是I1，另外两个是I2和I3，它们应该是相同的。这样就能得到这个公式。如果cosθ为零，那么θ就是90度。）
+Today's first topic is gravity inside Earth. We talked about the shell theorem last time. That is, if you consider the gravity due to this shell at a point inside the Earth, there is no force on it. Now for the next shell, there's also no force. So that means all the material in the Earth outside of this circle together have no gravity on this point. The gravity on that point is due to all the material inside of that radius.So this gravity at all equal to gravity due to the material inside the sphere of radius R. Now, that material has a mass of is equal to 4 pi over 3 times R cubed. Well, we are assuming a uniform sphere. This is not true, but let us assume it's a uniform sphere.The volume of the sphere is 4 pi over 3 times R cubed. If rho is the density, then that material has a mass of this amount. （今天的第一个主题是地球内部的重力。我们上次讨论了壳层定理。也就是说，如果你考虑地球内部某一点由这个壳层产生的重力，那么该点不受力。现在来看下一个壳层，同样没有力。这意味着地球在这个圆圈之外的所有物质对这个点都没有引力作用。该点的引力完全来自于该半径以内的所有物质。因此，这个引力等于半径为R的球体内物质产生的引力。现在，假设这是一个均匀球体（虽然实际情况并非如此），该球体的体积为4π/3乘以R的立方。如果ρ表示密度，那么这部分物质的质量就等于这个体积乘以密度。）
+
+这部分物质的质量：$\frac{4}{3}\pi r^3 \cdot \rho$
 
 
-This becomes exactly the formula that I had derived in class. But at that time I thought that that's only an approximation. For theta equal to zero, I thought it's an approximation.Even for theta equal to zero, I thought it's an approximation. But after careful analysis, it's not an approximation. For theta equal to zero, it was exact.Next, we discuss on a rigid body. If there is a complicated rigid body, it has a center of mass. Now every part of the body is attracted by gravity.Actually, this is the real situation. （这正是我在课堂上推导出的公式。但当时我以为那只是个近似值。对于θ等于零的情况，我也以为是个近似值。即使θ等于零，我仍认为是个近似值。但经过仔细分析后，发现它并非近似值。当θ等于零时，这个公式是完全精确的。接下来我们讨论刚体问题。如果一个复杂的刚体存在质心，那么物体的每一部分都会受到重力作用。实际上，这才是真实情况。）
+By the shell theorem, our external points, the gravitational force at O is equal to all that mass being concentrated at the center.So it's equal to minus g times m. So m is the mass at this point times this density, this mass, divided by R cubed, divided by R squared. This is g m, capital M, divided by R squared. And that is, of course, equal to something, something, something times R. A constant times R. So we now have the conclusion.Inside the Earth, the gravitational force is proportional to R. （根据壳层定理，对于外部点 O 而言，引力等效于所有质量集中于中心点所产生的效果。因此引力等于负g乘以m。这里的m是该点的质量乘以密度（即此处的质量），再除以R的立方，然后除以R的平方。这相当于g乘以大写的M（总质量）除以R的平方。显然，这个结果等于某个常数乘以R。于是我们得出重要结论：在地球内部，引力大小与距离R成正比。）
 
+$O$ 点出小 $m$ 所受到的引力：$$=-\frac{Gm\left( \frac{4}{3}\pi r^3 \rho \right)}{r^2}=-(\text{something})\cdot r$$
+It's equal to zero at the center, obviously, because at the center it's spherically symmetrical. There's no force in any direction. But as you go away from it, the attractive force becomes larger and larger, proportional to R, until you reach this point.关于这一点有没有问题? （在中心处显然等于零，因为在中心处是球对称的。任何方向都没有力。但随着你远离中心，吸引力会越来越大，与R成正比，直到你到达这一点。关于这一点有没有问题？)
 
-Every part of the body is subject to gravity depending on the density. If there is a particularly heavy part of that body, then the gravity here is higher.We now want to prove a theorem that the total effect of all these gravitational forces on different parts of the body is equivalent to one force acting only on one point, the center of mass, and with a magnitude proportional to the total mass of the body. So let me, theorem. The total effect on a rigid body by gravity is equivalent to that of a single force with magnitude sum of mg on the center of mass.（身体的每一部分都根据其密度受到重力影响。如果身体某个部位特别重，那么该处的重力就更大。我们现在要证明一个定理：所有这些重力对身体不同部位的作用效果，等同于一个仅作用于质心的单一力，其大小与身体总质量成正比。那么我来陈述定理：重力对刚体的总作用效果，等同于一个大小为mg总和、作用于质心的单一力。）
+Now we talk about Section 10-6, Gravitational Potential Energy. 引力的位能,potential energy是未能。 We want to prove that the potential energy is equal to minus g m m. 大m是,小m是,大m是sun,小m是earth. 我们先take one dimension.（现在我们讨论第10-6节，引力势能。引力的位能，potential energy 是位能（我们一般称为势能，势能就是与位置相关的能）。我们要证明势能等于负g m m。大M是太阳，小m是地球。我们先取一维情况。）
 
-
-The total effect on a rigid body by gravity is equivalent to that of a single force with magnitude sum of mg on the center of mass. This is true for a static situation. The results of the Qilong test were very good.and perhaps talk to Professor Rang or Professor An about how you could do better later on this semester. It's clear that the average score of Tsinghua students is much better than my students at Stony Brook. So I'm pleased about that.Today's first topic is gravity inside Earth. We talked about the shell theorem last time. That is, if you consider the gravity due to this shell at a point inside the Earth, there is no force on it.（重力对刚体的总效应等同于一个大小为mg的合力作用于质心。这在静态情况下成立。启龙测试的结果非常好。或许你可以和冉教授或安教授谈谈这学期后期如何做得更好。显然，清华大学学生的平均成绩比我石溪分校的学生要好得多。对此我感到很高兴。今天的第一个主题是地球内部的重力。我们上次讨论了壳层定理。也就是说，如果你考虑地球内部某一点由这个壳层产生的重力，那么该点不受力。）
-
-Now for the next shell, there's also no force. So that means all the material in the Earth outside of this circle together have no gravity on this point. The gravity on that point is due to all the material inside of that radius.So this gravity at all equal to gravity due to the material inside the sphere of radius R. Now, that material has a mass of is equal to 4 pi over 3 times R cubed. Well, we are assuming a uniform sphere. This is not true, but let us assume it's a uniform sphere.The volume of the sphere is 4 pi over 3 times R cubed. If rho is the density, then that material has a mass of this amount. （现在来看下一个壳层，同样没有力。这意味着地球在这个圆圈之外的所有物质对这个点都没有引力作用。该点的引力完全来自于该半径以内的所有物质。因此，这个引力等于半径为R的球体内物质产生的引力。现在，假设这是一个均匀球体（虽然实际情况并非如此），该球体的体积为4π/3乘以R的立方。如果ρ表示密度，那么这部分物质的质量就等于这个体积乘以密度。）
-
-
-By the shell theorem, our external points, the gravitational force at O is equal to all that mass being concentrated at the center.So it's equal to minus g times m. So m is the mass at this point times this density, this mass, divided by R cubed, divided by R squared. This is g m, capital M, divided by R squared. And that is, of course, equal to something, something, something times R. A constant times R. So we now have the conclusion.Inside the Earth, the gravitational force is proportional to R. （根据壳层定理，对于外部点O而言，引力等效于所有质量集中于中心点所产生的效果。因此引力等于负g乘以m。这里的m是该点的质量乘以密度（即此处的质量），再除以R的立方，然后除以R的平方。这相当于g乘以大写的M（总质量）除以R的平方。显然，这个结果等于某个常数乘以R。于是我们得出重要结论：在地球内部，引力大小与距离R成正比。）
-
-
-It's equal to zero at the center, obviously, because at the center it's spherically symmetrical. There's no force in any direction. But as you go away from it, the attractive force becomes larger and larger, proportional to R, until you reach this point.关于这一点有没有问题? Now we talk about Section 10-6, Gravitational Potential Energy. 引力的未能,potential energy是未能。 We want to prove that the potential energy is equal to minus g m m. 大m是,小m是,大m是sun,小m是earth. 我们先take one dimension.（在中心处显然等于零，因为在中心处是球对称的。任何方向都没有力。但随着你远离中心，吸引力会越来越大，与R成正比，直到你到达这一点。关于这一点有没有问题？现在我们讨论第10-6节，引力势能。引力的未能，potential energy是未能。我们要证明势能等于负g m m。大M是太阳，小m是地球。我们先取一维情况。）
+我们要证明的是引力势能：$$U=-\frac{GMm}{r}$$其中 $M$ 是太阳，$m$ 是地球。
 
 
 假如u是这样子的话, 我们从前说这个force是等于 minus du dr. 我们从前说这个,就是 just a second. This is equal to g m m r squared.Let's see, something's wrong. First, there's a minus here, here, there's a minus sign here, and d dr, d dr, get the minus sign. So this is right.所以,假如你u可以这样子的话, 这个force是等于这个,correct. 所以,u等于这是correct. 这是一个one-dimensional problem.How about the three-dimensional? Three-dimensional的话,要用所谓partial differentiation. Three-dimensional的时候, 然后,这个u是等于minus g m m r, 现在是x squared加y squared加z squared. 现在是three-dimensional了。 （如果U是这样的，我们之前说过这个力等于负的dU/dr。我们之前说过这个，就是——稍等。这等于G M m / r²。让我看看，好像有点问题。首先这里有个负号，这里，这里有个负号，然后d/dr，d/dr，得到这个负号。所以这是对的。所以，如果你的U可以是这样，这个力就等于这个，正确。所以U等于这个是正确的。这是一个一维问题。三维情况呢？三维的话要用所谓的偏微分。在三维情况下，这个U等于负的G M m / r，现在r是x² + y² + z²。现在是三维了。）
+
+在一维情况下，由于：$$F=-\frac{\partial U}{\partial r}=-\frac{GMm}{r^2}$$
+所以上述关于 $U$ 公式结论成立。
+
+而在三维情况下，需要偏微分，$$U=-\frac{GMm}{\sqrt{ x^2+y^2+z^2 }}$$
+
+(12.30)
+
 
 
 那么,对于x,y,z,你要differentiate的时候, 叫做partial differentiation, that means, when you differentiate relative to x, you consider y and z as fixed.When you differentiate with respect to y, you consider x and z as fixed. So, this notation叫做force,是一个vector, 是du dx,minus du dx, minus du dy, minus du dz. 这个notation是叫partial differentiation.这里有一个平常的这个叫做gradient, 三角形加一个箭头的意思, 就是三个partial differentiation, partial x, partial y, partial z. OK,我们来试一下。 假如我们take这个的话, 那么,du dx是等于minus g m m, 乘上du d这个square root, 然后,d这个square root,dx。 （那么，对于x、y、z进行微分时，就叫做偏微分。也就是说，当你对x微分时，要把y和z视为常数；当你对y微分时，要把x和z视为常数。这个记号叫做力，是一个矢量，即du/dx、-du/dx、-du/dy、-du/dz。这个记号称为偏微分。这里有个常用的符号叫梯度，用倒三角形加箭头表示，就是三个偏微分：∂/∂x、∂/∂y、∂/∂z。好，我们来试一下。如果我们取这个的话，那么du/dx等于负g乘以m乘以m，再乘以du/d这个平方根，然后d这个平方根/dx。）
