--- a/基础物理/杨振宁/第十四讲.md
+++ b/基础物理/杨振宁/第十四讲.md
@@ -164,42 +164,40 @@ Now, let's try to prove that. Suppose this distance is R, this distance is A. A 
 
 This circle is 2 pi R sine theta.The width of the skin is R d theta. The mass of the ring is the traditional area. If the depth of the ring is T, and the density is rho, then multiply that by rho T. Rho is equal to density.T is equal to thickness. This is the mass of the ring. So there are so many things in the mass of the ring.The force is in this direction. So force by ring at P is equal to rho T times this thing. If the mass of this thing is M, then it turns out GM divided by the distance squared.What is the distance squared? It's R sine theta squared. The distance squared is R sine theta squared plus this squared, which is plus A times R cosine theta squared. But this is not right.Because this is the force. （这个圆的周长是2πR sinθ。圆环的宽度是R dθ。环的质量，如果环的深度是 T，密度是ρ，那么再乘以 ρT。ρ代表密度，T 代表厚度。这就是环的质量。所以环的质量包含了很多因素。力的方向是这个方向。因此，P 受到的环的力等于ρT乘以这个量。如果这个东西的质量是M，那么结果是GM除以距离的平方。距离的平方是多少？是R sinθ的平方。距离的平方是R sinθ的平方加上这个量的平方，也就是加上A乘以R cosθ的平方。但这并不正确。因为这是力。）
 
-设外壳的厚度是 $T$，密度为 $\rho$，则环的质量为 $2\pi r \sin \theta T\rho r\mathrm{d}\theta$
+设外壳的厚度是 $T$，密度为 $\rho$，则环的质量为 $2\pi r \sin \theta T\rho r\mathrm{d}\theta$，暂且把这一坨称为 $M'$
 
-(1.14.27)
+![[Pasted image 20251201220521.png|500]]
 
+力的方向水平向左，距离是红色的虚线长度，它是三角形的斜边，其中一个边是 $r\sin \theta$，另一个水平长边是 $a-r\cos \theta$，而力是沿水平方向的，需要再乘 $\cos \varphi$，竖直方向的力互相抵消。
 
+$$F=\frac{GMM'}{(r\sin \theta)^2+(a-r \cos \theta)^2} \cos \varphi$$
+
+而 $$\cos \varphi=\frac{a-r\cos \theta}{\sqrt{ (r\sin \theta)^2+(a-r \cos \theta)^2 }}$$所以有：$$F=2\pi\rho Tr^2GM \int_{\theta=0}^{\theta=\pi} \frac{\sin \theta \mathrm{d}\theta(a-r\cos \theta)}{(\sqrt{ (r\sin \theta)^2+(a-r \cos \theta)^2 })^3}$$
 Every force has a component along the axis. So it has to multiply by cosine phi.Does everybody agree with this? But we know what cosine theta is. What is cosine theta? Cosine theta is equal to A minus R cosine phi divided by the radius. The radius is the square root of the denominator.I called that F just now. So F is equal to 2 pi rho T R squared GM times the integral of sine theta d theta times A minus R cosine theta divided by the square root of R square sine square theta plus A minus R cosine theta squared. （每个力都有一个沿轴的分量。因此必须乘以余弦φ。大家都同意这一点吗？但我们知道余弦θ是什么。余弦θ等于A减去R乘以余弦φ，再除以半径。半径就是分母的平方根。我刚才称之为F。因此，F等于2πρTR²GM乘以正弦θdθ的积分，再乘以A减去R乘以余弦θ，除以R²正弦²θ加上A减去R乘以余弦θ的平方的平方根。）
-
 
 This is theta times 0 to theta times pi.I'm assigning this as an exercise. In one of the exercises next week, you will be evaluating this integral. And after you have evaluated it, you find it to be this 4 pi rho T R squared GM over A squared.But 4 pi R squared, 4 pi R squared is the surface area of the shell. 4 pi R squared T is the volume. So 4 pi R squared T rho is the mass of the shell.I call this M prime. So this is equal to M prime GM M prime over A squared. Therefore, the force is equivalent to, is equal to the force exerted at the point P by a body at the center with mass equal to M prime.The shell there. （这是θ乘以0到θ乘以π的范围。我把它作为一个练习布置给你们。在下周的某个练习中，你们将需要计算这个积分。当你们计算完之后，会发现结果等于4πρTR²GM/A²。但4πR²，4πR²是壳层的表面积。4πR²T是体积。所以4πR²Tρ就是壳层的质量。我称之为M'。因此，这个结果等于M'GM'/A²。所以，这个力等同于，等于一个位于中心、质量为M'的物体在点P处所施加的力。就是那个壳层。）
 
-So Newton assumed that the sun is a, is a uniform, it only has to be spherically symmetrical. So many shells.And all of these shells can be compressed into one point, attracting the earth. By a reverse application of this theorem, you can also shrink the earth into a point. So therefore, you get the conclusion that you can, you need only think of point motion for talking about such a, for talking about such a dynamic problem.If you look at, I think I told you once, it's clear that that is how he arrived at this. It took him 20 years to develop integral calculus for him to be able to do this. （因此牛顿假设太阳是一个均匀的、仅需满足球对称的天体。由无数层壳层构成。所有这些壳层都可以压缩成一个点来吸引地球。通过逆向运用这一定理，你也可以将地球压缩成一个点。于是最终得出结论：在研究这类动力学问题时，只需考虑质点运动即可。我记得曾告诉过你们——显然这就是他推导出结论的思维过程。为此他花了二十年时间发展微积分才得以实现。）
+上面那个积分结果：$$F=\frac{4\pi \rho Tr^2GM}{a^2}$$
+其中，$4\pi r^2$ 是球壳表面积，$4\pi r^2T$ 是球壳体积，$4\pi r^2T\rho$ 是球壳质量，我们称之为 $M'$，所以这个结果为 $$F=\frac{GMM'}{a^2}$$等价于一个位于球心，质量为 $M'$ 的物体对点 $P$ 处所施加的力。
 
+So Newton assumed that the sun is a, is a uniform, it only has to be spherically symmetrical. So many shells.And all of these shells can be compressed into one point, attracting the earth. By a reverse application of this theorem, you can also shrink the earth into a point. So therefore, you get the conclusion that you can, you need only think of point motion for talking about such a, for talking about such a dynamic problem.If you look at, I think I told you once, it's clear that that is how he arrived at this. It took him 20 years to develop integral calculus for him to be able to do this. （因此牛顿假设太阳是一个均匀的、仅需满足球对称的天体。由无数层壳层构成。所有这些壳层都可以压缩成一个点来吸引地球。通过逆向运用这一定理，你也可以将地球压缩成一个点。于是最终得出结论：在研究这类动力学问题时，只需考虑质点运动即可。我记得曾告诉过你们——显然这就是他推导出结论的思维过程。为此他花了二十年时间发展微积分才得以实现。）
 
 But when he wrote his book, he did not use integral calculus.He used geometrical arguments. I never understood the geometrical argument, but as I told you, Chandrasekhar, a great astrophysicist who died 10 years ago, spent the last 10 years of his life trying to puzzle out what Newton did. And he claimed to have understood the geometrical proof of this shell theorem.So this is the earth. For a man here, the gravitational force has in the denominator the radius of the earth, squared. But if you have a mountain, for a man on top of the mountain, the distance to the center of the earth is larger, and therefore the gravitational attraction is smaller.Actually, there's another added part to it. （但当他写书时，他并没有使用积分计算。他使用的是几何论证。我从未理解过这个几何论证，但正如我告诉你的，钱德拉塞卡——一位十年前去世的伟大天体物理学家，用他生命的最后十年试图解开牛顿的所作所为。他声称已经理解了这个壳定理的几何证明。这就是地球。对于这里的人来说，引力的分母是地球半径的平方。但如果你有一座山，对于山顶上的人来说，到地球中心的距离更大，因此引力更小。实际上，还有另一个附加的部分。）
 
-
-For a man here, the immediate... If this is a high mountain, like the Himalayas, the person here suffers a force not only by the earth itself, but also by the mountain. So it's very complicated.But the main effect... These two effects are in opposite directions. He's been very high. The distance is larger, so therefore the gravitational attraction is smaller.But because of the mountain, his gravitational attraction is larger. These two are in opposite directions. But the former one is more important.So the gravitational force at this point is in general smaller than the gravitational force on the surface of the earth.（对于这里的人来说，即时感受到的... 如果这是一座高山，比如喜马拉雅山，这个人不仅受到地球本身的引力，还受到山的引力。所以情况非常复杂。但主要的影响... 这两种作用力方向相反。他所在的位置很高。距离更远，因此地球对他的引力更小。但由于山的存在，引力又增大了。这两者是相反的。但前者的影响更大。所以一般来说，这个点的引力比地球表面的引力要小。）
-
-
-You can read that in the book. Now let's ask what is the gravitational force inside the earth.People now can dig a hole into the ground several kilometers. And you can ask, how about the gravitational force inside? All right. Then there is another version of the shear theorem.The shear theorem... Let's see. Did I write down the... I did not write down. Shear theorem.The gravitational force on a particle, on a point, outside a shear, by the shear, is the same as if the shear is compressed into one point at its center. Let me read. （你可以在书中读到这些内容。现在让我们探讨一下地球内部的引力是怎样的。如今人们可以在地面挖掘数公里深的洞穴。那么你可能会问，地球内部的引力情况如何？好的。接下来还有另一个版本的剪切定理。剪切定理……让我看看。我有没有记下……我没记下来。剪切定理。对于一个位于剪切体外的粒子或点来说，剪切体对其施加的引力，等同于将整个剪切体压缩至其中心一点时所产生的引力。我来读一下。）
+For a man here, the immediate... If this is a high mountain, like the Himalayas, the person here suffers a force not only by the earth itself, but also by the mountain. So it's very complicated. But the main effect... These two effects are in opposite directions. He's been very high. The distance is larger, so therefore the gravitational attraction is smaller.But because of the mountain, his gravitational attraction is larger. These two are in opposite directions. But the former one is more important.So the gravitational force at this point is in general smaller than the gravitational force on the surface of the earth.（对于这里的人来说，即时感受到的... 如果这是一座高山，比如喜马拉雅山，这个人不仅受到地球本身的引力，还受到山的引力。所以情况非常复杂。但主要的影响... 这两种作用力方向相反。他所在的位置很高。距离更远，因此地球对他的引力更小。但由于山的存在，引力又增大了。这两者是相反的。但前者的影响更大。所以一般来说，这个点的引力比地球表面的引力要小。）
 
 
-The gravitational force on a point outside the shear, by the shear, is the same as if the shear is compressed into one point at its center.There is another part of the shear theorem. You can call it shear theorem A, shear theorem 2, shear theorem B. The gravitational effect force exerted by a shear, by a shear, on a point inside the shear is zero. So, is it? The point P suffers attraction this way, but it also is attracted this way.So, in all directions, it's obvious that the force exerted in the center is zero because it's very symmetrical, so every force is balanced by another force equal and opposite to it. （剪切层外一点所受的引力，等同于将整个剪切层压缩至其中心一点所产生的引力。剪切定理还有另一部分——你可以称之为剪切定理A、剪切定理2或剪切定理B：剪切层对其内部某点的引力效应为零。为什么呢？点P受到这个方向的引力，但同时也会受到那个方向的引力。从各个方向来看，显然中心点所受的合力为零，因为这种对称结构使得每个力都被大小相等、方向相反的力所平衡。）
+You can read that in the book. Now let's ask what is the gravitational force inside the earth.People now can dig a hole into the ground several kilometers. And you can ask, how about the gravitational force inside? All right. Then there is another version of the shell theorem.The shell theorem... Let's see. Did I write down the... I did not write down. Shell theorem.The gravitational force on a particle, on a point, outside a shell, by the shell, is the same as if the shell is compressed into one point at its center. Let me read. （你可以在书中读到这些内容。现在让我们探讨一下地球内部的引力是怎样的。如今人们可以在地面挖掘数公里深的洞穴。那么你可能会问，地球内部的引力情况如何？好的。接下来还有另一个版本的 shell 定理。让我看看。我有没有记下……我没记下来。shell 定理。对于一个位于壳体外的粒子或点来说，壳体对其施加的引力，等同于将整个壳体压缩至其中心一点时所产生的引力。我来读一下。）
 
+The gravitational force on a point outside the shell, by the shell, is the same as if the shell is compressed into one point at its center.There is another part of the shell theorem. You can call it shell theorem A, shell theorem 2, shell theorem B. The gravitational effect force exerted by a shell, by a shell, on a point inside the shell is zero. So, is it? The point P suffers attraction this way, but it also is attracted this way.So, in all directions, it's obvious that the force exerted in the center is zero because it's very symmetrical, so every force is balanced by another force equal and opposite to it. （壳层外一点所受的引力，等同于将整个壳层质量压缩至其中心点所产生的引力。壳层定理还有另一部分内容，你可以称之为壳层定理 A、壳层定理 2 或壳层定理 B：壳层对其内部任意一点施加的净引力为零。真的如此吗？点 P 受到这个方向的引力，但同时也会受到那个方向的引力。显然，在中心点处合力为零——因为完美的对称性使得每个方向的引力都被大小相等、方向相反的力抵消了。）
 
-But for a point not in the center, it is not obvious that it's equal to zero. But Newton had proven that it is equal to zero, so it's also called a shear theorem.I will assign that also as an exercise for you. But both shear theorem A and shear theorem B can be very easily proven when you learn electricity. It's a fundamental aspect of electricity, and by more advanced concepts, it becomes—you don't need any integration, you can immediately get the result.That is the power of higher mathematics. In fact, this remarkable phenomenon that from the outside, you can compress it, the effect can be regarded as a compressed point. （但对于不在中心的点，其是否等于零并不明显。然而牛顿已经证明它确实等于零，因此这也被称为剪切定理。我也会把这个留作你们的习题。不过，当你学习电学时，剪切定理A和剪切定理B都能非常容易地得到证明。这是电学的一个基本方面，通过更高级的概念，你甚至不需要任何积分就能立即得出结果——这就是高等数学的力量。事实上，这个奇妙的现象在于，从外部看，你可以将其压缩，其效果可以视为一个被压缩的点。）
+But for a point not in the center, it is not obvious that it's equal to zero. But Newton had proven that it is equal to zero, so it's also called a shell theorem.I will assign that also as an exercise for you. But both shell theorem A and shell theorem B can be very easily proven when you learn electricity. It's a fundamental aspect of electricity, and by more advanced concepts, it becomes—you don't need any integration, you can immediately get the result.That is the power of higher mathematics. In fact, this remarkable phenomenon that from the outside, you can compress it, the effect can be regarded as a compressed point. （但对于不在中心的点，其合力为零并不显而易见。不过牛顿已经证明其确实为零，因此这也被称为壳层定理。我也会将这部分内容留作你们的习题。但无论是壳层定理A还是壳层定理B，当你们学习电学时都能轻松得到验证——这是电学的基本特性，借助更高级的概念甚至无需积分运算就能立即得出结论。这就是高等数学的力量。事实上，这种从外部观测时可将其视为压缩质点的神奇现象，正是其精妙所在。）
 
+Inside, there is no force.That crucially is dependent on the inverse square law. For example, you can do the same exercise that we did, but not with 1 over r squared, with 1 over r 2 plus delta. People have studied this.Instead of 1 over r squared, you write as 1 over r 2 plus delta. Then you find that the needle theorem is correct. If delta is not equal to zero, then both the outside and the inside, the results are different, are very complicated.So in many senses, Newton was very lucky, because if nature did not have delta equal to zero, then it becomes much more complicated. He may never find Newton's law. （在内部，不存在力。这一点至关重要，依赖于平方反比定律。举个例子，你可以做和我们相同的练习，但不是用 $1/r^2$，而是用 $1/(r^{2+δ})$。人们已经研究过这个问题。不是$1/r^2$，而是写成 $1/(r^{2+δ})$，如果 $\delta \neq 0$，那么外部和内部的结果都会不同，而且非常复杂。所以从很多方面来说，牛顿非常幸运，因为如果自然界中的 $\delta \neq 0$，那么情况就会变得复杂得多。他可能永远也发现不了牛顿定律。）
 
-Inside, there is no force.That crucially is dependent on the inverse square law. For example, you can do the same exercise that we did, but not with 1 over r squared, with 1 over r 2 plus delta. People have studied this.Instead of 1 over r squared, you write as 1 over r 2 plus delta. Then you find that the needle theorem is correct. If delta is not equal to zero, then both the outside and the inside, the results are different, are very complicated.So in many senses, Newton was very lucky, because if nature did not have delta equal to zero, then it becomes much more complicated. He may never find Newton's law. （在内部，不存在力。这一点至关重要，依赖于平方反比定律。举个例子，你可以做和我们相同的练习，但不是用1除以r的平方，而是用1除以r的2加δ次方。人们已经研究过这个问题。不是1除以r的平方，而是写成1除以r的2加δ次方。然后你会发现针定理是正确的。如果δ不等于零，那么外部和内部的结果都会不同，而且非常复杂。所以从很多方面来说，牛顿非常幸运，因为如果自然界中的δ不等于零，那么情况就会变得复杂得多。他可能永远也发现不了牛顿定律。）
+But of course, if delta is not equal to zero, Kevlar's law is also not correct.And if Kevlar's law is not correct, then the whole problem, the thing would go around in very complicated orbits, and there would be no Kevlar's three laws. Then they may never develop the mechanics. Okay, so why was Newton so lucky? Or in many senses, why is mankind so lucky? If you ask this question, you'll find that it's because 1 over r squared law, not only is simple when you write it as 1 over r squared, it's because it follows more general rules, and in those general rules, it has to be delta equal to zero.（当然，如果 $\delta \neq 0$，开普勒定律也就不成立。而如果开普勒定律不成立，那么整个问题就会变得非常复杂，物体将沿着极其复杂的轨道运行，也就不会有开普勒三定律了。这样一来，力学可能永远都无法发展起来。那么，为什么牛顿会如此幸运呢？或者说，在某种意义上，为什么人类会如此幸运？如果你思考这个问题，你会发现这是因为 $1/r^2$ 定律不仅在你写成 $1/r^2$ 时显得简单，还因为它遵循更普遍的规律，而在这些普遍规律中，$\delta$ 必须等于零。）
 
-
-But of course, if delta is not equal to zero, Kevlar's law is also not correct.And if Kevlar's law is not correct, then the whole problem, the thing would go around in very complicated orbits, and there would be no Kevlar's three laws. Then they may never develop the mechanics. Okay, so why was Newton so lucky? Or in many senses, why is mankind so lucky? If you ask this question, you'll find that it's because 1 over r squared law, not only is simple when you write it as 1 over r squared, it's because it follows more general rules, and in those general rules, it has to be delta equal to zero.（当然，如果delta不等于零，凯夫拉定律也就不成立。而如果凯夫拉定律不成立，那么整个问题就会变得非常复杂，物体将沿着极其复杂的轨道运行，也就不会有凯夫拉三定律了。这样一来，力学可能永远都无法发展起来。那么，为什么牛顿会如此幸运呢？或者说，在某种意义上，为什么人类会如此幸运？如果你思考这个问题，你会发现这是因为1/r²定律不仅在你写成1/r²时显得简单，还因为它遵循更普遍的规律，而在这些普遍规律中，delta必须等于零。）
-
-
-In other words, we now understand more why it has to be the inverse squared, not the inverse 2 plus delta. But that still does not explain why this more complicated beautiful structure was chosen by nature. remarkable that nature has successive layers of elegant and beautiful rules which in some sense are made such that it reveals beauty and that is the reason why we could decipher some of this. But you can never answer the last question because if you find an overall structure which explains this 2 plus delta you have to ask the question why this overall structure has infinite items.（换句话说，我们现在更明白了为什么必须是平方反比，而不是2加δ的反比。但这仍然无法解释为何大自然选择了这种更为复杂而精妙的结构。令人惊叹的是，大自然拥有层层递进、优雅而美丽的法则，这些法则在某种意义上被设计得能展现美感，这也正是我们能解读其中部分奥秘的原因。但你永远无法回答终极问题，因为即便你找到了能解释这个2加δ的整体结构，你仍要追问：为何这个整体结构包含无限的元素？）
-
+In other words, we now understand more why it has to be the inverse squared, not the inverse 2 plus delta. But that still does not explain why this more complicated beautiful structure was chosen by nature. remarkable that nature has successive layers of elegant and beautiful rules which in some sense are made such that it reveals beauty and that is the reason why we could decipher some of this. But you can never answer the last question because if you find an overall structure which explains this 2 plus delta you have to ask the question why this overall structure has infinite items.（换句话说，我们现在更明白了为什么必须是平方反比，而不是 $2+δ$ 的反比。但这仍然无法解释为何大自然选择了这种更为复杂而精妙的结构。令人惊叹的是，大自然拥有层层递进、优雅而美丽的法则，这些法则在某种意义上被设计得能展现美感，这也正是我们能解读其中部分奥秘的原因。但你永远无法回答终极问题，因为即便你找到了能解释这个 $2+δ$ 的整体结构，你仍要追问：为何这个整体结构包含无限的元素？）
 
 So I always say that what Newton taught us is that there is science but science cannot explain everything. If you ask too many questions science cannot answer it. That part belongs to religion because the religious people say that's very simple, God made it. But that answer in fact is very profound. Profound in the sense that it can always be true. And so in my opinion science and religion are not contradictory. They are after the same thing.（所以我常说，牛顿教会我们的是：科学确实存在，但科学无法解释一切。如果你问太多问题，科学也无法回答。那部分属于宗教，因为宗教人士会说这很简单，是上帝创造的。但这个答案实际上非常深刻。深刻之处在于它永远可能是正确的。因此在我看来，科学与宗教并不矛盾。它们追求的是同一个东西。）
 
