--- a/基础物理/练习题/第 1 章习题.md
+++ b/基础物理/练习题/第 1 章习题.md
@@ -237,3 +237,13 @@
 #### 问题 61
 
 上课时间，漫长的过程。对于一个普通的四年制本科课程，总共需要在课堂上花费多少 (a) 小时和 (b) 秒？请用科学计数法输入你的答案。
+
+
+## 第二章
+
+### Question
+
+**问题 1：** 图 2.1 给出了沿 $x$ 轴运动粒子的速度。(a) 粒子的初始运动方向是什么？(b) 最终运动方向是什么？(c)粒子是否曾瞬时停止？(d) 加速度是正是负？(e) 加速度是恒定的还是变化的？
+
+**问题 2：** 图 2.2 显示了一只吉娃娃追逐德国牧羊犬时的加速度 a(t) 随时间变化的曲线。在标出的时间段中，吉娃娃在哪段时间内保持匀速运动？
+
