--- a/基础物理/杨振宁/第十二讲.md
+++ b/基础物理/杨振宁/第十二讲.md
@@ -336,7 +336,7 @@ Let us now... I think we have absorbed too much mathematics.Let us now come to r
 
 She would spin faster. That's elementary according to what we say here, because let's assume she's a cylinder.So her angular momentum in the z direction is equal to I, the moment of inertia in the z direction, times omega in the z direction. And so when she moves the dumbbells closer to herself, it's clear that the I becomes smaller, because I is equal to summation mi xi squared plus yi squared. So they become smaller.If I becomes smaller, oh, because L dot is equal to torque. She suffers no torque in the z direction, because what she suffers are only vertical forces, and vertical forces cannot cause a torque in the z direction, because two vectors parallel to each other gives you a cross product which is zero. （她会转得更快。根据我们这里的说法，这是基本原理，因为假设她是一个圆柱体。因此，她在 z 方向的角动量等于 I（即z方向的转动惯量）乘以 z 方向的角速度 ω。当她将哑铃向自己靠近时，显然 I 会变小，因为 I 等于各质点mi乘以xi平方加yi平方的总和。所以这些值会变小。如果 I 变小了，哦，因为 L 点等于扭矩。她在 z 方向上不受扭矩作用，因为她只受到垂直方向的力，而垂直方向的力无法在 z 方向上产生扭矩，因为两个平行向量的叉积为零。）
 
-一人站在旋转的圆盘上，手里拿着哑铃，则她可以被视为一个圆柱体，$L_{z}=I_{3}\omega_{3}$，当她收缩胳膊时，$I_{3}$ 会变小，
+一人站在旋转的圆盘上，手里拿着哑铃，则她可以被视为一个圆柱体，$L_{z}=I_{3}\omega_{3}$，当她收缩胳膊时，$I_{3}$ 会变小，把女孩和哑铃作为一个整体，目前该整体只受到垂直方向的外力（重力，支持力），所以在 $z$ 轴的扭矩是 0。所以 $L_{z}$ 是个常量，因此 $I_{3}$ 减少，转动速度必然增大。
 
 $$\dot{L}_{z} = 0, \quad\quad \to \quad\quad L_{z}=\text{常数}$$
 
